--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">LikeLion</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Dongduk LikeLion</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
