--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>멋쟁이 사자처럼 X 동덕여대</title>
+	    <title> 동덕여대X 멋쟁이 사자처럼</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
