change e-mail address in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
                     <div>
                         <div>
                             <div class="form-group">
-                                 <input type="text" class="form-control" readonly="readonly" value="ddwlikelion@gmail.com" id="name" align="center" style = "text-align:center;">
+                                 <input type="text" class="form-control" readonly="readonly" value="likelion.dongduk@gmail.com" id="name" align="center" style = "text-align:center;">
                                  <p class="help-block text-danger"></p>
                             </div>
                     </div>
