--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 
 
     <title>멋쟁이 사자처럼 ★ 동덕여대</title>
-=======
 	    <title> 동덕여대X 멋쟁이 사자처럼</title>
 
     <!-- Bootstrap Core CSS -->
@@ -88,7 +87,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in" style="font-family: 'Hanna'">동덕여자대학교</div>
-                <div align="center"><img src="img/logos/likelion_png.png" width=10%></div>
+                <div align="center"><img src="img/logos/likelion_png.png" width=10%> <img src="img/logos/dongduk_lion.png" width="10%"></div>
                 <div class="intro-heading">멋쟁이 사자처럼</div>
                 <a href="javascript:alert('지원기간이 아닙니다.')" class="page-scroll btn btn-xl">지원하기</a>
                 
