--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                 <div class="col-lg-12 text-center">
                     <center><img src="img/dongduk_lion.jpg"></center>
                     <h2 class="section-heading">Services</h2><br>
-                    <h3 class="section-subheading text-muted"  style="font-family:'Nanum Gothic'; font-size:30px">내가 만들고 싶은 IT 서비스를 직접 배우고 직접 만듭니다.</br><br><u><b>단 81일만에</b></u></h3>
+                    <h3 class="section-subheading text-muted"  style="font-family:'Nanum Gothic'; font-size:30px">내가 만들고 싶은 IT 서비스를 직접 배우고 직접 만듭니다.</br><br><u><b>단 90일만에</b></u></h3>
                     <br><br><br><br><br><br><br><br><br><br><br>
                 </div>
             </div>
@@ -291,7 +291,7 @@
                     <div>
                         <div>
                             <div class="form-group">
-                                 <input type="text" class="form-control" readonly="readonly" value="likelion.dongduk@gmail.com" id="name" align="center" style = "text-align:center;">
+                                 <input type="text" class="form-control" readonly="readonly" value="dongduk@likelion.net" id="name" align="center" style = "text-align:center;">
                                  <p class="help-block text-danger"></p>
                             </div>
                     </div>
