--- a/public/index.html
+++ b/public/index.html
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted" style="font-family:'Nanum Gothic'">궁금한 점 있으시면 아래 주소로 메일을 보내주세요.</h3>
+                    <h3 class="section-subheading text-muted" style="font-family:'Nanum Gothic'">궁금한 점 있으시면 아래 주소로 메일을 보내주시거나 카톡에서 옐로아이디 친구 추가 후 문의 해주세요.</h3>
                 </div>
             </div>
             <div class="row">
@@ -291,7 +291,8 @@
                     <div>
                         <div>
                             <div class="form-group">
-                                 <input type="text" class="form-control" readonly="readonly" value="likelion.dongduk@gmail.com" id="name" align="center" style = "text-align:center;">
+                                 <input type="text" class="form-control" readonly="readonly" value="dongduk@likelion.com" id="name" align="center" style = "text-align:center;">
+                                 <input type="text" class="form-control" readonly="readonly" value="@멋사동덕" id="name" align="center" style = "text-align:center;">
                                  <p class="help-block text-danger"></p>
                             </div>
                     </div>
